更新截稿日期

--- a/src/main/resources/templates/page/2020/cn/cpci.html
+++ b/src/main/resources/templates/page/2020/cn/cpci.html
@@ -100,7 +100,7 @@ var _hmt = _hmt || [];
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>出版国家：</strong>英国（United Kingdom）<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>ISSN：</strong>1755-1307<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>发表检索：</strong>2020年3-4月份前后发表，并在发表后2-4个月左右完成检索<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>投稿截止：</strong>本批次征文将于2020年1月31日截止<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>投稿截止：</strong>由于疫情原因，本批次征文推迟一个月，定于2020年2月29日截止（原截稿日期为2020年1月31日）<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>数据库收录：</strong>EI数据库（EI-Compendex） ISTP数据库（CPCI-S）<br/>
 			</p>
             </div>
