--- a/src/main/resources/templates/page/2020/cn/sci2.html
+++ b/src/main/resources/templates/page/2020/cn/sci2.html
@@ -143,7 +143,7 @@ var _hmt = _hmt || [];
               所有投稿文章需承诺无一稿多投，未在其他期刊或会议上公开发表;<br/>
               初稿需为word文档，中英文均可（终稿必须为英文），篇幅在2500words左右，图表分辨率在300dpi以上或作为独立附件提交；<br/>
               初稿无需排版，在文章通过审核后，会根据目标期刊的要求提供模板文件，届时完成排版即可；<br/>
-							SCI期刊长期征稿，每月均有送交机会，早投稿早发表；<br/>
+							<strong>SCI期刊长期征稿，每月均有送交机会，早投稿早发表；</strong><br/>
             </p>
             <p><strong>2. 注意事项</strong><br/>
               投稿时请务必提供真实、有效的联系方式并将我方编辑邮箱加入您的白名单<br/>
