--- a/src/main/resources/templates/page/2020/cn/sciabstract.html
+++ b/src/main/resources/templates/page/2020/cn/sciabstract.html
@@ -105,7 +105,7 @@ var _hmt = _hmt || [];
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊分区：</strong>中科院分区三区，JCR分区Q2<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>发表检索：</strong>本批次征稿将在2020年3-4月份前后发表，发表后2个月左右完成SCI检索<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>文章模板：</strong><a href="/cn/download/ICABST-Abstract-Template.doc" target="_blank" style="color: #102cf7"><u>点击下载摘要模板</u></a><br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>投稿截止：</strong>本批次征文将于2020年1月31日截止<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>投稿截止：</strong>由于疫情原因，本批次征文推迟一个月，定于2020年2月29日截止（原截稿日期为2020年1月31日）<br/>
 			</p>
             </div>
 							
