2019 最终版 不会再动

--- a/src/main/resources/templates/page/2019/cn/cpci.html
+++ b/src/main/resources/templates/page/2019/cn/cpci.html
@@ -19,18 +19,18 @@ var _hmt = _hmt || [];
   <meta name="description" content="ICABST,2019国际前沿生物科学与技术学术会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
-	<link rel="icon" href="../img/icon.png" type="image/x-icon">
-  <link rel="stylesheet" href="../css/public.css"/>
-  <link rel="stylesheet" href="../css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="../css/style.css"/>
-  <link rel="stylesheet" href="../css/main-zh.css"/>
-  <link rel="stylesheet" href="../css/global.css"/>
-  <link rel="stylesheet" href="../lib/layui/css/layui.css">
-  <script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
-  <script type="text/javascript" src="../js/jquery-1.11.1.min.js"></script>
-  <script type="text/javascript" src="../js/superslide.2.1.js"></script>
-  <script type="text/javascript" src="../js/js.js"></script>
-  <script type="text/javascript" src="../js/xadmin.js"></script>
+  <link rel="icon" href="../img/icon.png" type="image/x-icon">
+  <link rel="stylesheet" href="../2019/css/public.css"/>
+  <link rel="stylesheet" href="../2019/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="../2019/css/style.css"/>
+  <link rel="stylesheet" href="../2019/css/main-zh.css"/>
+  <link rel="stylesheet" href="../2019/css/global.css"/>
+  <link rel="stylesheet" href="../2019/layui/css/layui.css">
+  <script type="text/javascript" src="../2019/layui/layui.js" charset="utf-8"></script>
+  <script type="text/javascript" src="../2019/js/jquery-1.11.1.min.js"></script>
+  <script type="text/javascript" src="../2019/js/superslide.2.1.js"></script>
+  <script type="text/javascript" src="../2019/js/js.js"></script>
+  <script type="text/javascript" src="../2019/js/xadmin.js"></script>
 </head>
 <body>
 <div class="width-100 all_bg">
@@ -158,9 +158,9 @@ var _hmt = _hmt || [];
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/2019cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/2019cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/2019cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/2019cn/submit" target="_blank"><img src="../2019/img/conference2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/2019cn/article" target="_blank"><img src="../2019/img/conferencearticle2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/2019cn/article" target="_blank"><img src="../2019/img/journalarticle2.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
 			</div>
