--- a/src/main/resources/templates/page/2019/cn/venue.html
+++ b/src/main/resources/templates/page/2019/cn/venue.html
@@ -20,16 +20,16 @@ var _hmt = _hmt || [];
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
-  <link rel="stylesheet" href="../css/public.css"/>
-  <link rel="stylesheet" href="../css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="../css/style.css"/>
-  <link rel="stylesheet" href="../css/main-zh.css"/>
-  <link rel="stylesheet" href="../css/global.css"/>
-  <link rel="stylesheet" href="../lib/layui/css/layui.css">
-  <script type="text/javascript" src="/lib/layui/layui.js" charset="utf-8"></script>
-  <script type="text/javascript" src="../js/jquery-1.11.1.min.js"></script>
-  <script type="text/javascript" src="../js/superslide.2.1.js"></script>
-  <script type="text/javascript" src="../js/js.js"></script>
+  <link rel="stylesheet" href="../2019/css/public.css" />
+  <link rel="stylesheet" href="../2019/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../2019/css/style.css"/>
+  <link rel="stylesheet" href="../2019/css/main-zh.css"/>
+  <link rel="stylesheet" href="../2019/css/global.css"/>
+  <link rel="stylesheet" href="../2019/layui/css/layui.css">
+  <script type="text/javascript" src="/2019/layui/layui.js" charset="utf-8"></script>
+  <script type="text/javascript" src="../2019/js/jquery-1.11.1.min.js" ></script>
+  <script type="text/javascript" src="../2019/js/superslide.2.1.js" ></script>
+  <script type="text/javascript" src="../2019/js/js.js" ></script>
 </head>
 <body>
 <div class="width-100 all_bg">
@@ -96,7 +96,7 @@ var _hmt = _hmt || [];
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;位于曼谷Surawongse路的“曼谷塔瓦纳酒店”不仅以其高标准的高效率和友好的服务而闻名，而且还以其最优越的市中心位置而闻名于世。对于休闲和度假客人来说，酒店的中心位置提供了方便的旅行机会，可以到达曼谷大多数最好的购物、观光景点和娱乐设施，还可以步行到曼谷的天车BTS Silom (Saladaeng站)和MRT地铁Rama 4 (Samyan站)。为了满足商务旅客的需求，曼谷塔瓦纳酒店提供了无与伦比的优势。大堂设备齐全的商务中心为繁忙的行政人员提供了秘书和会议室开会的便利。整个酒店都提供高速WiFi (无线互联网)，允许在客房、泳池边、餐厅或酒店大堂进行“连接”。在附近的高速公路上，可以方便地到达曼谷的会议和展览中心，以及距曼谷仅35公里的素万那普国际机场。
 					</p>
 					<ul>
-						<li><img src="../img/meeting-events-01.jpg" height="400px"><img src="../img/meeting-events-02.jpg" height="400px"><img src="../img/meeting-events-03.jpg" height="400px" width="299px"><img src="../img/meeting-events-04.jpg" height="400px" width="601px"></li>
+						<li><img src="../2019/img/meeting-events-01.jpg" height="400px"><img src="../2019/img/meeting-events-02.jpg" height="400px"><img src="../2019/img/meeting-events-03.jpg" height="400px" width="299px"><img src="../2019/img/meeting-events-04.jpg" height="400px" width="601px"></li>
 						<div class="clear"></div>
 						</ul>
 				</div>
