--- a/src/main/resources/templates/page/2019/en/organizer.html
+++ b/src/main/resources/templates/page/2019/en/organizer.html
@@ -21,16 +21,16 @@ var _hmt = _hmt || [];
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
-  <link rel="stylesheet" href="../css/public.css"/>
-  <link rel="stylesheet" href="../css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="../css/style.css"/>
-  <link rel="stylesheet" href="../css/main-zh.css"/>
-  <link rel="stylesheet" href="../css/global.css"/>
-  <link rel="stylesheet" href="../lib/layui/css/layui.css">
-  <script type="text/javascript" src="/lib/layui/layui.js" charset="utf-8"></script>
-  <script type="text/javascript" src="../js/jquery-1.11.1.min.js"></script>
-  <script type="text/javascript" src="../js/superslide.2.1.js"></script>
-  <script type="text/javascript" src="../js/js.js"></script>
+  <link rel="stylesheet" href="../2019/css/public.css" />
+  <link rel="stylesheet" href="../2019/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../2019/css/style.css"/>
+  <link rel="stylesheet" href="../2019/css/main-zh.css"/>
+  <link rel="stylesheet" href="../2019/css/global.css"/>
+  <link rel="stylesheet" href="../2019/layui/css/layui.css">
+  <script type="text/javascript" src="/2019/layui/layui.js" charset="utf-8"></script>
+  <script type="text/javascript" src="../2019/js/jquery-1.11.1.min.js" ></script>
+  <script type="text/javascript" src="../2019/js/superslide.2.1.js" ></script>
+  <script type="text/javascript" src="../2019/js/js.js" ></script>
 </head>
 <body>
 <div class="width-100 all_bg">
@@ -176,10 +176,10 @@ var _hmt = _hmt || [];
     <div class="page_right col-4-1 fr mr-25 lh-40" style="text-align: justify; font-family:'Times New Roman'; font-size: 20px">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			  <li><a class="pointer" href="/2019/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
-			  <li><a class="pointer" href="/cn/download/ICABST-Registration-Form2019.xlsx" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
-			  <li><a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
-			  <li><a class="pointer" href="/cn/download/ICABST-Poster-Template.pptx" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
+			  <li><a class="pointer" href="/2019/submit" target="_blank"><img src="../2019/img/abstractsubmission.png" height="68px"></a></li>
+			  <li><a class="pointer" href="/cn/download/ICABST-Registration-Form2019.xlsx" target="_blank"><img src="../2019/img/registrationfrom.png" height="68px"></a></li>
+			  <li><a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank"><img src="../2019/img/abstracttemplete.png" height="68px"></a></li>
+			  <li><a class="pointer" href="/cn/download/ICABST-Poster-Template.pptx" target="_blank"><img src="../2019/img/postertemplete.png" height="68px"></a></li>
 			  <div class="clear"></div>
 			  </ul>
 			</div>
