--- a/src/main/resources/templates/page/2019/en/venue.html
+++ b/src/main/resources/templates/page/2019/en/venue.html
@@ -21,16 +21,16 @@ var _hmt = _hmt || [];
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
-  <link rel="stylesheet" href="../css/public.css"/>
-  <link rel="stylesheet" href="../css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="../css/style.css"/>
-  <link rel="stylesheet" href="../css/main-zh.css"/>
-  <link rel="stylesheet" href="../css/global.css"/>
-  <link rel="stylesheet" href="../lib/layui/css/layui.css">
-  <script type="text/javascript" src="/lib/layui/layui.js" charset="utf-8"></script>
-  <script type="text/javascript" src="../js/jquery-1.11.1.min.js"></script>
-  <script type="text/javascript" src="../js/superslide.2.1.js"></script>
-  <script type="text/javascript" src="../js/js.js"></script>
+  <link rel="stylesheet" href="../2019/css/public.css" />
+  <link rel="stylesheet" href="../2019/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../2019/css/style.css"/>
+  <link rel="stylesheet" href="../2019/css/main-zh.css"/>
+  <link rel="stylesheet" href="../2019/css/global.css"/>
+  <link rel="stylesheet" href="../2019/layui/css/layui.css">
+  <script type="text/javascript" src="/2019/layui/layui.js" charset="utf-8"></script>
+  <script type="text/javascript" src="../2019/js/jquery-1.11.1.min.js" ></script>
+  <script type="text/javascript" src="../2019/js/superslide.2.1.js" ></script>
+  <script type="text/javascript" src="../2019/js/js.js" ></script>
 </head>
 <body>
 <div class="width-100 all_bg">
@@ -99,7 +99,7 @@ var _hmt = _hmt || [];
 					To meet the demands of the business traveler, The Tawana Bangkok offers unrivaled advantages. The fully equipped Business Center at the lobby provides the busy executive with the convenience of a secretary and a Boardroom for meetings. Hi-Speed WiFi (Wireless Internet) is available throughout the hotel, allowing "connection" in the guestroom, at the poolside, restaurants, or hotel's Lobby. 
 					</p>
 					<ul>
-						<li><img src="../img/meeting-events-01.jpg" height="400px"><img src="../img/meeting-events-02.jpg" height="400px"><img src="../img/meeting-events-03.jpg" height="400px" width="299px"><img src="../img/meeting-events-04.jpg" height="400px" width="601px"></li>
+						<li><img src="../2019/img/meeting-events-01.jpg" height="400px"><img src="../2019/img/meeting-events-02.jpg" height="400px"><img src="../2019/img/meeting-events-03.jpg" height="400px" width="299px"><img src="../2019/img/meeting-events-04.jpg" height="400px" width="601px"></li>
 						<div class="clear"></div>
 						</ul>
 				</div>
