--- a/src/main/resources/templates/page/2020/cn/index.html
+++ b/src/main/resources/templates/page/2020/cn/index.html
@@ -14,23 +14,23 @@ var _hmt = _hmt || [];
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />  
-  <title>ICABST首页|大会首页--2019国际前沿生物科学与技术学术会议(ICABST2019),泰国生物会议</title>
-  <meta name="keywords" content="ICABST,官网,主页,ICABST2019,biotechnology,biomaterial,biomedical,生物会议,曼谷,泰国,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP" />
-  <meta name="description" content="ICABST,2019国际前沿生物科学与技术学术会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
+  <title>ICABST首页|大会首页--2020国际前沿生物科学与技术学术会议(ICABST2020),泰国生物会议</title>
+  <meta name="keywords" content="ICABST,官网,主页,ICABST2020,biotechnology,biomaterial,biomedical,生物会议,海南,三亚,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP" />
+  <meta name="description" content="ICABST,2019国际前沿生物科学与技术学术会议将在10月底于海南三亚召开,会议可安排SCI/EI期刊论文发表" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
-  <link rel="stylesheet" href="../css/public.css"/>
-  <link rel="stylesheet" href="../css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="../css/style.css"/>
-  <link rel="stylesheet" href="../css/main-zh.css"/>
-  <link rel="stylesheet" href="../css/global.css"/>
-  <link rel="stylesheet" href="../lib/layui/css/layui.css">
-  <script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
-  <script type="text/javascript" src="../js/jquery-1.11.1.min.js"></script>
-  <script type="text/javascript" src="../js/superslide.2.1.js"></script>
-  <script type="text/javascript" src="../js/js.js"></script>
-  <script type="text/javascript" src="../js/xadmin.js"></script>
+  <link rel="stylesheet" href="../2020/css/public.css" />
+  <link rel="stylesheet" href="../2020/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../2020/css/style.css"/>
+  <link rel="stylesheet" href="../2020/css/main-zh.css"/>
+  <link rel="stylesheet" href="../2020/css/global.css"/>
+  <link rel="stylesheet" href="../2020/layui/css/layui.css">
+  <script type="text/javascript" src="/2020/layui/layui.js" charset="utf-8"></script>
+  <script type="text/javascript" src="../2020/js/jquery-1.11.1.min.js" ></script>
+  <script type="text/javascript" src="../2020/js/superslide.2.1.js" ></script>
+  <script type="text/javascript" src="../2020/js/js.js" ></script>
+  <script type="text/javascript" src="../2020/js/xadmin.js"></script>
 
 </head>
 <body>
@@ -80,9 +80,9 @@ var _hmt = _hmt || [];
   <div class="banner w-1200">
     <div class="layui-carousel" id="test10">
       <div carousel-item="">
-        <div><img class="images" src="../img/Banner1中文-小.png"></div>
-        <div><img class="images" src="../img/Banner2-中文-小.png"></div>
-        <div><img class="images" src="../img/Banner3-中文-小.png"></div>
+        <div><img class="images" src="../2019/img/Banner1中文-小.png"></div>
+        <div><img class="images" src="../2019/img/Banner2-中文-小.png"></div>
+        <div><img class="images" src="../2019/img/Banner3-中文-小.png"></div>
       </div>
     </div>
     <div class="hd">
@@ -119,7 +119,7 @@ var _hmt = _hmt || [];
           <li><a href="/proposal" target="_blank" style="color: #102cf7"><u>2020年会议合办邀请&通知</u></a><!-- <span class="float_right color-6">xxxx-xx-xx</span> --></li>
 					<li><a href="/achieve" target="_blank" style="color: #102cf7"><u>2019ICABST在曼谷塔瓦那酒店成功召开</u></a></li>
 					<li><a href="http://pharmacology.sc.mahidol.ac.th/december-26-28-2019-international-conference-on-advances-in-biological-science-and-technology/" target="_blank" style="color: #102cf7"><u>本会议已在泰国玛希隆大学(Mahidol University)官网上线</u></a></li>
-          <li><a href="/sci1" target="_blank" style="color: #102cf7"><u>SCI正刊征文1----生物、材料、分子生物相关领域</u></a><span class="float_right color-6">xxxx-xx-xx</span></li>
+          <li><a href="/sci1" target="_blank" style="color: #102cf7"><u>SCI正刊征文1----生物、材料、分子生物相关领域</u></a><!--<span class="float_right color-6">xxxx-xx-xx</span>--></li>
 					<li><a href="/sci2" target="_blank" style="color: #102cf7"><u>SCI正刊征文2----农业科学、动植物科学、兽医学、水产、养殖等相关领域</u></a></li>
 					<li><a href="/sci3" target="_blank" style="color: #102cf7"><u>SCI正刊征文3----生物医学、药学等相关领域</u></a></li>
 					<li><a href="/sciabstract" target="_blank" style="color: #102cf7"><u>SCI摘要发表--中科院三区，影响因子2以上，JCR二区</u></a></li>
@@ -145,9 +145,9 @@ var _hmt = _hmt || [];
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/submit" target="_blank"><img src="../2019/img/conference2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../2019/img/conferencearticle2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../2019/img/journalarticle2.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
 			</div>
