--- a/src/main/resources/templates/page/2020/cn/registration.html
+++ b/src/main/resources/templates/page/2020/cn/registration.html
@@ -14,23 +14,23 @@ var _hmt = _hmt || [];
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />  
-  <title>ICABST参会报名|参会注册--2019国际前沿生物科学与技术学术会议(ICABST2019),泰国生物会议</title>
-  <meta name="keywords" content="ICABST,ICABST2019,biotechnology,biomaterial,biomedical,参会注册,境外会议,生物会议,曼谷,泰国,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP" />
-  <meta name="description" content="ICABST,2019国际前沿生物科学与技术学术会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
+  <title>ICABST参会报名|参会注册--2020国际前沿生物科学与技术学术会议(ICABST2020),生物会议</title>
+  <meta name="keywords" content="ICABST,ICABST2020,biotechnology,biomaterial,biomedical,参会注册,境外会议,生物会议,海南,三亚,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP" />
+  <meta name="description" content="ICABST,2020国际前沿生物科学与技术学术会议将在10月底于海南三亚召开,会议可安排SCI/EI期刊论文发表" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
-  <link rel="stylesheet" href="../css/public.css"/>
-  <link rel="stylesheet" href="../css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="../css/style.css"/>
-  <link rel="stylesheet" href="../css/main-zh.css"/>
-  <link rel="stylesheet" href="../css/global.css"/>
-  <link rel="stylesheet" href="../lib/layui/css/layui.css">
-  <script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
-  <script type="text/javascript" src="../js/jquery-1.11.1.min.js"></script>
-  <script type="text/javascript" src="../js/superslide.2.1.js"></script>
-  <script type="text/javascript" src="../js/js.js"></script>
-  <script type="text/javascript" src="../js/xadmin.js"></script>
+  <link rel="stylesheet" href="../2020/css/public.css" />
+  <link rel="stylesheet" href="../2020/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../2020/css/style.css"/>
+  <link rel="stylesheet" href="../2020/css/main-zh.css"/>
+  <link rel="stylesheet" href="../2020/css/global.css"/>
+  <link rel="stylesheet" href="../2020/layui/css/layui.css">
+  <script type="text/javascript" src="/2020/layui/layui.js" charset="utf-8"></script>
+  <script type="text/javascript" src="../2020/js/jquery-1.11.1.min.js" ></script>
+  <script type="text/javascript" src="../2020/js/superslide.2.1.js" ></script>
+  <script type="text/javascript" src="../2020/js/js.js" ></script>
+  <script type="text/javascript" src="../2020/js/xadmin.js"></script>
 </head>
 <body>
 <div class="width-100 all_bg">
@@ -185,9 +185,9 @@ var _hmt = _hmt || [];
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/submit" target="_blank"><img src="../2019/img/conference2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../2019/img/conferencearticle2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../2019/img/journalarticle2.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
 			</div>
