--- a/src/main/resources/templates/page/2020/cn/venue.html
+++ b/src/main/resources/templates/page/2020/cn/venue.html
@@ -14,22 +14,22 @@ var _hmt = _hmt || [];
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />  
-  <title>ICABST召开地点|会议地点--2019国际前沿生物科学与技术学术会议(ICABST2019),泰国生物会议</title>
+  <title>ICABST召开地点|会议地点--2020国际前沿生物科学与技术学术会议(ICABST2020),生物会议</title>
   <meta name="keywords" content="ICABST,ICABST2019,biotechnology,biomaterial,biomedical,生物会议,曼谷,泰国,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP" />
-  <meta name="description" content="ICABST,2019国际前沿生物科学与技术学术会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
+  <meta name="description" content="ICABST,2020国际前沿生物科学与技术学术会议将在10月底于海南三亚召开,会议可安排SCI/EI期刊论文发表" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
-  <link rel="stylesheet" href="../css/public.css"/>
-  <link rel="stylesheet" href="../css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="../css/style.css"/>
-  <link rel="stylesheet" href="../css/main-zh.css"/>
-  <link rel="stylesheet" href="../css/global.css"/>
-  <link rel="stylesheet" href="../lib/layui/css/layui.css">
-  <script type="text/javascript" src="/lib/layui/layui.js" charset="utf-8"></script>
-  <script type="text/javascript" src="../js/jquery-1.11.1.min.js"></script>
-  <script type="text/javascript" src="../js/superslide.2.1.js"></script>
-  <script type="text/javascript" src="../js/js.js"></script>
+  <link rel="stylesheet" href="../2020/css/public.css"/>
+  <link rel="stylesheet" href="../2020/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="../2020/css/style.css"/>
+  <link rel="stylesheet" href="../2020/css/main-zh.css"/>
+  <link rel="stylesheet" href="../2020/css/global.css"/>
+  <link rel="stylesheet" href="../2020/layui/css/layui.css">
+  <script type="text/javascript" src="../2020/layui/layui.js" charset="utf-8"></script>
+  <script type="text/javascript" src="../2020/js/jquery-1.11.1.min.js"></script>
+  <script type="text/javascript" src="../2020/js/superslide.2.1.js"></script>
+  <script type="text/javascript" src="../2020/js/js.js"></script>
 </head>
 <body>
 <div class="width-100 all_bg">
@@ -100,7 +100,7 @@ var _hmt = _hmt || [];
 
 <!--		  </div>-->
 					<ul>
-						<li><img src="../img/meeting-events-01.jpg" height="400px"><img src="../img/meeting-events-02.jpg" height="400px"><img src="../img/meeting-events-03.jpg" height="400px" width="299px"><img src="../img/meeting-events-04.jpg" height="400px" width="601px"></li>
+						<li><img src="../2019/img/meeting-events-01.jpg" height="400px"><img src="../2019/img/meeting-events-02.jpg" height="400px"><img src="../2019/img/meeting-events-03.jpg" height="400px" width="299px"><img src="../2019/img/meeting-events-04.jpg" height="400px" width="601px"></li>
 						<div class="clear"></div>
 						</ul>
 				</div>
